DRY: merge images

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,9 +1,12 @@
 FROM debian:stretch
 LABEL maintainer="Anybox"
 ENV DEBIAN_FRONTEND noninteractive
+
+ARG GHUSER OCA
+ARG GHREPO OCB
+
 ENV VERSION 12.0
 # change this to trigger a debian update:
-# This should be probably be removed in the future if the images are force-rebuilt regularly
 ENV LASTBUILD 2019081101
 
 # Generate locale C.UTF-8 for postgres and general locale data
@@ -63,7 +66,7 @@ RUN set -x; \
     && npm install --no-save -g rtlcss \
     && python3 -m pip install --no-cache-dir --upgrade pip \
     && pip3 install --no-cache-dir simplejson num2words unicodecsv phonenumbers \
-    && pip3 install --no-cache-dir -r https://github.com/odoo/odoo/raw/$VERSION/requirements.txt \
+    && pip3 install --no-cache-dir -r https://github.com/$GHUSER/$GHREPO/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
         build-essential \
         libldap2-dev \ 
@@ -73,3 +76,30 @@ RUN set -x; \
         sudo \
     && apt-get clean && rm -rf /var/lib/apt/lists/* \
     && adduser --system --quiet odoo
+
+RUN cd /srv \
+    && curl -o odoo.zip -sSL https://github.com/$GHUSER/$GHREPO/archive/$VERSION.zip \
+    && unzip -q odoo.zip \
+    && rm odoo.zip \
+    && mv $GHREPO-$VERSION odoo \
+    && pip3 install --no-cache-dir -e odoo/ \
+    && pip3 install --no-cache-dir -r odoo/requirements.txt
+
+
+COPY ./entrypoint.sh /
+
+RUN mkdir -p /srv/extra-addons /srv/custom-addons /var/lib/odoo \
+        && chown -R odoo: /srv/extra-addons /srv/custom-addons /var/lib/odoo
+COPY ./odoo.conf /etc/odoo/
+RUN chown odoo /etc/odoo/odoo.conf
+VOLUME ["/var/lib/odoo"]
+
+EXPOSE 8069 8072
+
+ENV ODOO_RC /etc/odoo/odoo.conf
+
+USER odoo
+
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["/srv/odoo/odoo-bin"]
+
