--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,14 @@ build-openupgrade:
     - docker push $IMAGE/openupgrade:$COMMIT_TAG
     - docker push $IMAGE/openupgrade-oca:$COMMIT_TAG
 
+build-odoo:
+  stage: build2
+  script:
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $DOCKER_ENV_CI_REGISTRY
+    - docker pull $IMAGE/postgresql:11
+    - docker pull $IMAGE/odoo:$COMMIT_TAG || true
+    - docker build --build-arg GHUSER=odoo --build-arg GHREPO=odoo --cache-from $IMAGE/odoo:$COMMIT_TAG -t $IMAGE/odoo:$COMMIT_TAG base
+    - docker push $IMAGE/odoo:$COMMIT_TAG
 
 #test:
 #  stage: test
