no requirements.txt in 7.0. Use one from 8.0

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -69,7 +69,7 @@ RUN set -x; \
     && npm install --no-save -g rtlcss \
     && pip install --upgrade pip \
     && pip install simplejson num2words unicodecsv phonenumbers \
-    && pip install -r https://github.com/$GHUSER/$GHREPO/raw/$VERSION/requirements.txt \
+    && pip install -r https://github.com/$GHUSER/$GHREPO/raw/8.0/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
         build-essential \
         libffi-dev \
