--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -70,7 +70,7 @@ RUN set -x; \
     && rm wkhtmltox.deb \
     && npm install --no-save -g rtlcss \
     && pip install --upgrade pip \
-    && pip install simplejson num2words unicodecsv phonenumbers \
+    && pip install unidecode simplejson num2words unicodecsv phonenumbers \
     && pip install -r https://github.com/$GHUSER/$GHREPO/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
         build-essential \
