fix warning missing module report_xls

--- a/ocb-oca/Dockerfile
+++ b/ocb-oca/Dockerfile
@@ -13,6 +13,7 @@ RUN set -x; \
         OCA/knowledge \
         OCA/l10n-france \
         OCA/account-financial-reporting \
+        OCA/reporting-engine \
         OCA/partner-contact \
         OCA/project \
         OCA/server-brand \
