autodetect, fix and install python deps of odoo addons

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -8,7 +8,7 @@ ARG GHREPO
 ENV VERSION 8.0
 
 # change this to trigger a debian update:
-ENV LASTBUILD 2019081101
+ENV LASTBUILD 2019103001
 
 # Generate locale C.UTF-8 for postgres and general locale data
 ENV LANG C.UTF-8
@@ -70,7 +70,7 @@ RUN set -x; \
     && rm wkhtmltox.deb \
     && npm install --no-save -g rtlcss \
     && pip install --upgrade pip \
-    && pip install unidecode simplejson num2words unicodecsv phonenumbers \
+    && pip install num2words phonenumbers simplejson \
     && pip install -r https://github.com/$GHUSER/$GHREPO/raw/$VERSION/requirements.txt \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
         build-essential \
