--- a/ocb-oca/Dockerfile
+++ b/ocb-oca/Dockerfile
@@ -55,6 +55,7 @@ print(' '.join(set(chain(*[\
     'lxml.html', 'lxml').replace( \
     'usb.core', 'pyusb').replace( \
     'jwt', 'python-jwt').replace( \
+    ' fs ', ' fs==0.5.4 ').replace( \
     'stdnum', 'python-stdnum'))"`; \
         do pip install $m; done \
     && pip install num2words phonenumbers simplejson \
