--- a/base/docker-compose.yml
+++ b/base/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     ports:
       - "8069:8069"
       - "8072:8072"
-    command: /srv/odoo/openerp-server -i base
+    command: /srv/odoo/odoo-bin -i base
 
   db:
     build: ../postgresql
