--- a/ocb-oca/docker-compose.yml
+++ b/ocb-oca/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     ports:
       - "8069:8069"
       - "8072:8072"
+    environment:
+      WAIT_FOR_LOCAL_DB: "true"
     command: /srv/odoo/odoo-bin -i base,disable_odoo_online,backend_theme_v13,res_config_settings_enterprise_remove
 
   db:
