--- a/odoo-ee/odoo.conf
+++ b/odoo-ee/odoo.conf
@@ -39,7 +39,7 @@
 #-----------------------------------------------------------------------------
 # Specify the database host (default localhost).
 #-----------------------------------------------------------------------------
-db_host = db
+db_host =
 
 #-----------------------------------------------------------------------------
 # Specify the database port (default None).
