--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -6,6 +6,7 @@ ENV VERSION 13.0
 
 RUN set -x; \
     cd /srv/extra-addons \
+    && pip3 install firebase_admin \
 #
     ### DOWNLOAD MODULES
     && curl -o addons.zip -sSL -u ${GITHUB_TOKEN}:x-oauth-basic \
