firebase dev deps

--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -5,7 +5,12 @@ ARG GITHUB_TOKEN
 ENV VERSION 13.0
 
 USER root
-RUN pip3 install firebase_admin
+RUN apt-get install -y --no-install-recommends build-essential \
+    && pip3 install firebase_admin \
+    && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
+        build-essential \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
+
 
 USER odoo
 RUN set -x; \
