--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -6,10 +6,10 @@ ENV VERSION 13.0
 
 USER root
 RUN apt-get update \
-    && apt-get install -y --no-install-recommends build-essential \
+    && apt-get install -y --no-install-recommends build-essential python3-dev \
     && pip3 install firebase_admin \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
-        build-essential \
+        build-essential python3-dev \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 
