--- a/odoo-ee/Dockerfile
+++ b/odoo-ee/Dockerfile
@@ -7,6 +7,7 @@ ENV VERSION 13.0
 USER root
 RUN apt-get update \
     && apt-get install -y --no-install-recommends build-essential python3-dev \
+    && pip3 install --upgrade setuptools \
     && pip3 install firebase_admin \
     && apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false -o APT::AutoRemove::SuggestsImportant=false \
         build-essential python3-dev \
