Add Rust for the cryptography Python module

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -31,6 +31,7 @@ RUN set -x; \
     && apt-get update \
     && apt-get install -y --no-install-recommends \
         adduser \
+        build-essential \
         ca-certificates \
         cron \
         curl \
@@ -40,28 +41,28 @@ RUN set -x; \
         geoip-bin \
         # unavailable:
         #geoip-database-contrib \
+        libldap2-dev \ 
+        libpq-dev \
+        libsasl2-dev \
         libssl-dev \
         lsb-base \
         node-clean-css \
         node-less \
+        nodejs \
+        npm \
         poppler-utils \
-        python3-pip \
         postgresql-client \
+        python3-dev \
+        python3-pip \
         python3-pyldap \
         python3-qrcode \
         python3-renderpm \
         python3-setuptools \
         python3-vobject \
         python3-watchdog \
-        xz-utils \
-        build-essential \
-        libldap2-dev \ 
-        libpq-dev \
-        libsasl2-dev \
-        python3-dev \
+        rustc \
         unzip \
-        nodejs \
-        npm \
+        xz-utils \
     && curl -o wkhtmltox.deb -sSL https://github.com/wkhtmltopdf/wkhtmltopdf/releases/download/0.12.5/wkhtmltox_0.12.5-1.stretch_amd64.deb \
     && echo '7e35a63f9db14f93ec7feeb0fce76b30c08f2057 wkhtmltox.deb' | sha1sum -c - \
     && dpkg --force-depends -i wkhtmltox.deb \
@@ -76,6 +77,7 @@ RUN set -x; \
         libpq-dev \
         libsasl2-dev \
         python3-dev \
+        rustc \
         sudo \
     && apt-get clean && rm -rf /var/lib/apt/lists/* \
     && adduser --system --quiet --home /var/lib/odoo odoo
