--- a/odoo-ee/odoo.conf
+++ b/odoo-ee/odoo.conf
@@ -88,7 +88,7 @@ dbfilter = .*
 # list_db = False = > disables access to Bdd management URLs via the interface
 #                     and XMLRPC
 #-----------------------------------------------------------------------------
-list_db = False
+list_db = True
 
 
 data_dir = /var/lib/odoo
@@ -278,7 +278,7 @@ import_partial =
 #-----------------------------------------------------------------------------
 # Use the unaccent function provided by the database when available
 #-----------------------------------------------------------------------------
-unaccent = False
+unaccent = True
 
 #-----------------------------------------------------------------------------
 # specify modules to export. Use in combination with --i18n-export
